--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -19,12 +19,16 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
+                <th scope="col">Описание</th>
+                <th scope="col">Дата создания</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="vacancy: ${vacancies}">
                 <td th:text="${vacancy.id}"></td>
                 <td th:text="${vacancy.title}"></td>
+                <td th:text="${vacancy.description}"></td>
+                <td th:text="${vacancy.creationDate}"></td>
             </tr>
             </tbody>
         </table>
