--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Работа мечты! Список вакансий.</title>
+    <title>Работа мечты! Список кандидатов.</title>
 </head>
 <body>
 <div class="container">
@@ -24,11 +24,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="vacancy: ${vacancies}">
-                <td th:text="${vacancy.id}"></td>
-                <td th:text="${vacancy.title}"></td>
-                <td th:text="${vacancy.description}"></td>
-                <td th:text="${vacancy.creationDate}"></td>
+            <tr th:each="candidate: ${candidates}">
+                <td th:text="${candidate.id}"></td>
+                <td th:text="${candidate.title}"></td>
+                <td th:text="${candidate.description}"></td>
+                <td th:text="${candidate.creationDate}"></td>
             </tr>
             </tbody>
         </table>
