--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <!--  Зависимости Bootstrap-->
@@ -21,6 +21,7 @@
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link active" th:href="@{/candidates}">Кандидаты</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                 </div>
             </div>
         </div>
@@ -38,10 +39,10 @@
                 </thead>
                 <tbody>
                 <tr th:each="candidate: ${candidates}">
-                    <td th:text="${candidate.id}" />
-                    <td th:text="${candidate.name}" />
-                    <td th:text="${candidate.description}"/>
-                    <td th:text="${candidate.creationDate}"/>
+                    <td th:text="${candidate.id}"></td>
+                    <td th:text="${candidate.name}"></td>
+                    <td th:text="${candidate.description}"></td>
+                    <td th:text="${candidate.creationDate}"></td>
                 </tr>
                 </tbody>
             </table>
