--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <!--  Зависимости Bootstrap-->
@@ -21,6 +21,7 @@
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link active" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                 </div>
             </div>
         </div>
@@ -31,17 +32,15 @@
                 <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Имя</th>
-                    <th scope="col">Описание</th>
+                    <th scope="col">Название</th>
                     <th scope="col">Дата создания</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="vacancy: ${vacancies}">
-                    <td th:text="${vacancy.id}" />
-                    <td th:text="${vacancy.title}" />
-                    <td th:text="${vacancy.description}"/>
-                    <td th:text="${vacancy.creationDate}"/>
+                    <td th:text="${vacancy.id}"></td>
+                    <td th:text="${vacancy.title}"></td>
+                    <td th:text="${vacancy.creationDate}"></td>
                 </tr>
                 </tbody>
             </table>
