--- a/src/main/resources/templates/candidates/one.html
+++ b/src/main/resources/templates/candidates/one.html
@@ -9,27 +9,44 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Редактирование вакансии</title>
+    <title>Редактирование резюме</title>
 </head>
 <body>
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
-        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}">
+        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}" enctype="multipart/form-data">
             <input type="hidden" name="id" th:field="*{id}">
-            <div class="mb-3">
-                <label for="name" class="form-label"><b>Название</b></label>
-                <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Желаемая должность, например, Ведущий Java разработчик">
+            <input type="hidden" name="fileId" th:field="*{fileId}">
+            <div class="row mb-3">
+                <div class="col-3">
+                    <div class="mb-3">
+                        <img th:src="@{/files/{fileId}(fileId=*{fileId})}" class="w-100" alt="No image">
+                    </div>
+                    <div class="mb-3">
+                        <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file">
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="mb-3">
+                        <label for="name" class="form-label"><b>Название</b></label>
+                        <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Желаемая должность, например, Ведущий Java разработчик">
+                    </div>
+                    <div class="mb-3">
+                        <label for="city"><b>Город</b></label>
+                        <select class="form-control" id="city" name="cityId">
+                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
+                        </select>
+                    </div>
+<!--                    <div class="form-check mb-3">-->
+<!--                        <input type="checkbox" name="visible" class="form-check-input" id="visible" th:field="*{visible}">-->
+<!--                        <label class="form-check-label" for="visible">Опубликовать</label>-->
+<!--                    </div>-->
+                </div>
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
                 <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25" placeholder="Опишите ваши компетенции"></textarea>
-            </div>
-            <div class="mb-3">
-                <label for="city"><b>Город</b></label>
-                <select class="form-control" id="city" name="cityId">
-                    <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
-                </select>
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
