--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label"><b>Почта</b></label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="abc@mail.com" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label"><b>Пароль</b></label>
